# simplest_epub_generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/simplest_epub_generator/: __init__.py  simplest_epub_generator.py
tests/: test_simplest_epub_generator.py
tests/test_data/: test.epub
