[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[project]
name = "simplest_epub_generator"
version = "0.1.1"
authors = [{ name = "rrfedorovich", email = "rrfedorovich@gmail.com" }]
description = "A simplest EPUB file generator with image support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"EbookLib>=0.20", 
	"lxml>=6.0.2", 
	"six>=1.17.0"]

[project.urls]
Homepage = "https://github.com/rrfedorovich/simplest_epub_generator"
